some final changes

--- a/src/main/resources/assets/prospectorspicks/lang/en_us.json
+++ b/src/main/resources/assets/prospectorspicks/lang/en_us.json
@@ -3,7 +3,7 @@
     "item.prospectorspicks.copper_prospectors_pick": "Copper Prospectors Pick",
     "item.prospectorspicks.diamond_prospectors_pick": "Diamond Prospectors Pick",
     "item.prospectorspicks.netherite_prospectors_pick": "Netherite Prospectors Pick",
-    "itemGroup.prospectorspicks.prospectorspickstab": "Prospectors Tab",
+    "itemGroup.prospectorspicks.prospectorspickstab": "Prospector's Picks",
     "item.prospectorspicks.pick.no_valuables": "§4No ore found!",
     "item.prospectorspicks.pick.found": "§eFound:",
     "item.prospectorspicks.pick.tooltip_r": "Radius: ",
