--- a/src/main/resources/assets/prospectorspicks/lang/ru_ru.json
+++ b/src/main/resources/assets/prospectorspicks/lang/ru_ru.json
@@ -3,7 +3,7 @@
     "item.prospectorspicks.copper_prospectors_pick": "Медный геологический молоток",
     "item.prospectorspicks.diamond_prospectors_pick": "Алмазный геологический молоток",
     "item.prospectorspicks.netherite_prospectors_pick": "Незеритовый геологический молоток",
-    "itemGroup.prospectorspicks.prospectorspickstab": "Геомолотки",
+    "itemGroup.prospectorspicks.prospectorspickstab": "Геологические молотки",
     "item.prospectorspicks.pick.no_valuables": "§4Ничего не найдено!",
     "item.prospectorspicks.pick.found": "§eНайдено:",
     "item.prospectorspicks.pick.tooltip_r": "Радиус: ",
